--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,30 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Pranita Naik | Frontend Developer</title>
+    <!-- update the version number as needed -->
+    <script defer src='/__/firebase/5.2.0/firebase-app.js'></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src='/__/firebase/5.2.0/firebase-auth.js'></script>
+    <script defer src='/__/firebase/5.2.0/firebase-database.js'></script>
+    <script defer src='/__/firebase/5.2.0/firebase-messaging.js'></script>
+    <script defer src='/__/firebase/5.2.0/firebase-storage.js'></script>
+    <!-- initialize the SDK after all desired features are loaded -->
+    <script defer src='/__/firebase/init.js'></script>
+    <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet'>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css'
+          integrity='sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp'
+          crossorigin='anonymous'>
 </head>
 
 <body>
-<div id="app"/>
+<div id='app'/>
 
-<script src="/build/common.vendor.js"></script>
-<script src="/build/app.bundle.js"></script>
+<script src='/build/common.vendor.js'></script>
+<script src='/build/app.bundle.js'></script>
 </body>
 
 </html>
