--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Pranita Naik | Frontend Developer</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <!-- update the version number as needed -->
     <script defer src='/__/firebase/5.2.0/firebase-app.js'></script>
     <!-- include only the Firebase features as you need -->
